--- a/wp-content/plugins/ultimate-auction-pro-personal/languages/wdm-ultimate-auction-zh_TW.po
+++ b/wp-content/plugins/ultimate-auction-pro-personal/languages/wdm-ultimate-auction-zh_TW.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Ultimate Auction Pro\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-13 10:54+0530\n"
-"PO-Revision-Date: 2015-06-10 15:39+0800\n"
+"PO-Revision-Date: 2015-06-17 12:28+0800\n"
 "Last-Translator: \n"
 "Language-Team: WisdmLabs\n"
 "Language: zh_TW\n"
@@ -96,21 +96,21 @@ msgstr "現在就開始招標。"
 
 #: /home/praveen/UA/ultimate-auction-pro/auction-feeder-page.php:275
 msgid "Still some days left for expiration."
-msgstr ""
+msgstr "即將結束"
 
 #: /home/praveen/UA/ultimate-auction-pro/auction-feeder-page.php:277
 msgid "No new listings found."
-msgstr ""
+msgstr "沒有新上架產品"
 
 #: /home/praveen/UA/ultimate-auction-pro/auction-feeder-page.php:279
 msgid "No auction is sold yet."
-msgstr ""
+msgstr "沒有拍賣。"
 
 #: /home/praveen/UA/ultimate-auction-pro/auction-feeder-page.php:281
 #: /home/praveen/UA/ultimate-auction-pro/user-my-watchlist.php:45
 #: /home/praveen/UA/ultimate-auction-pro/ua-widget/sidebar-widget-for-ultimate-auction.php:96
 msgid "No Entries yet."
-msgstr ""
+msgstr "尚未有拍賣產品。"
 
 #: /home/praveen/UA/ultimate-auction-pro/auction-feeder-page.php:332
 #, php-format
@@ -3257,7 +3257,7 @@ msgstr ""
 
 #: /home/praveen/UA/ultimate-auction-pro/ua-category-feature/ua-search.php:37
 msgid "results found"
-msgstr ""
+msgstr "項產品已找到"
 
 #: /home/praveen/UA/ultimate-auction-pro/ua-category-feature/ua-search.php:68
 #: /home/praveen/UA/ultimate-auction-pro/ua-category-feature/category-menu.php:171
